@@ -1,6 +1,13 @@
 Summary of important user-visible changes for releases of the control package
 
 ===============================================================================
+control-2.3.51   Release Date: 2012-xx-yy   Release Manager: Lukas Reichlin
+===============================================================================
+
+** filt, filtdata
+   -- Added function to specify disrete-time transfer functions in DSP format.
+
+===============================================================================
 control-2.3.50   Release Date: 2012-03-06   Release Manager: Lukas Reichlin
 ===============================================================================
 
